# crewai-content-marketing

./: README.md  blog_post.md  facebook_post.md  instagram_post.md  linkedin_post.md  pyproject.toml  twitter_tweet.md
src/crewai_content_marketing/: crew.py  main.py
src/crewai_content_marketing/config/: agents.yaml  tasks.yaml
