[project]
name = "crewai_content_marketing"
version = "0.1.0"
description = "crewai-content-marketing using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "agentops>=0.4.17",
    "crewai[tools]>=0.140.0,<1.0.0",
]

[project.scripts]
crewai_content_marketing = "crewai_content_marketing.main:run"
run_crew = "crewai_content_marketing.main:run"
train = "crewai_content_marketing.main:train"
replay = "crewai_content_marketing.main:replay"
test = "crewai_content_marketing.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
